# Sensor-Calibration-Fusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
ros_nodes/: calibration_node.py  fusion_node.py
scripts/: calibrate.py  fuse.py  generate_sample_data.py  register.py  run_pipeline.py
src/: __init__.py
src/calibration/: __init__.py  calibration_data.py  extrinsic.py  intrinsic.py  stereo_rectify.py
src/fusion/: __init__.py  depth_to_pointcloud.py  multi_sensor_fusion.py  rgb_depth_fusion.py
src/registration/: __init__.py  global_registration.py  icp.py  metrics.py
src/transforms/: __init__.py  coordinate_frames.py  homogeneous.py  rigid_transform.py
src/utils/: __init__.py  io_utils.py  logger.py  visualization.py
tests/: test_calibration.py  test_fusion.py  test_registration.py  test_transforms.py  test_utils.py
