[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sensor-calibration-fusion"
version = "1.0.0"
description = "3D Sensor Calibration & Fusion System — multi-sensor calibration, rigid-body transforms, ICP registration, and RGB-D fusion."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "open3d>=0.17.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
scf-calibrate = "scripts.calibrate:cli"
scf-register = "scripts.register:cli"
scf-fuse = "scripts.fuse:cli"
scf-pipeline = "scripts.run_pipeline:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
